--- a/admin/src/main/resources/templates/system/testpaper/add.html
+++ b/admin/src/main/resources/templates/system/testpaper/add.html
@@ -204,11 +204,13 @@
         laydate.render({
             elem: '#startTime'
             ,type: 'datetime'
+            ,trigger: 'click'
         });
 
         laydate.render({
             elem: '#endTime'
             ,type: 'datetime'
+            ,trigger: 'click'
         });
     });
 </script>
