--- a/admin/src/main/resources/templates/system/testpaper/correctpeoplelist.html
+++ b/admin/src/main/resources/templates/system/testpaper/correctpeoplelist.html
@@ -6,16 +6,12 @@
 <body class="timo-layout-page">
 <div class="layui-card">
     <div class="layui-card-header timo-card-header">
-        <span><i class="fa fa-bars"></i> 试卷管理</span>
+        <span th:text="@{试卷 + ${testPaper.testname}} + 批改"><i class="fa fa-bars"></i></span>
         <i class="layui-icon layui-icon-refresh refresh-btn"></i>
     </div>
     <div class="layui-card-body">
         <div class="layui-row timo-card-screen">
             <div class="pull-left layui-form-pane timo-search-box">
-            </div>
-            <div class="pull-right screen-btn-group">
-                <button class="layui-btn open-popup" data-title="添加题目" th:attr="data-url=@{/system/subjectiveitem/add}"  data-size="auto">
-                    <i class="fa fa-plus"></i> 添加</button>
             </div>
         </div>
         <div class="timo-table-wrap">
@@ -26,9 +22,9 @@
                         <label class="timo-checkbox"><input type="checkbox">
                             <i class="layui-icon layui-icon-ok"></i></label>
                     </th>
-                    <th class="sortable" data-field="id">考试编号</th>
-                    <th class="sortable" data-field="testname">考试名称</th>
-                    <th class="sortable" data-field="startTime">开始时间</th>
+                    <th class="sortable" data-field="id">编号</th>
+                    <th class="sortable" data-field="userNickName">考生姓名</th>
+                    <!--<th class="sortable" data-field="isreadover">是否批阅</th>-->
                     <th>操作</th>
                 </tr>
                 </thead>
@@ -36,17 +32,16 @@
                 <tr th:each="item,itemStat:${list}">
                     <td><label class="timo-checkbox"><input type="checkbox" th:value="${item.id}">
                         <i class="layui-icon layui-icon-ok"></i></label></td>
-                    <td th:text="${itemStat.count}">考试编号</td>
-                    <td th:text="${item.testname}">考试名称</td>
-                    <td th:text="${item.startTime}">开始时间</td>
+                    <td th:text="${itemStat.count}">编号</td>
+                    <td th:text="${item.userNickName}">考生姓名</td>
+                    <!--<td th:if="item.isreadover == 0" text="未批阅">是否批阅</td>-->
                     <td>
-                        <a data-title="编辑试题" th:href="@{'/system/testpaper/toupdate/'+${item.id}}"  data-size="800,600">编辑</a>
+                        <a data-title="编辑试题" th:href="@{'/system/testpaper/getPaperById/'+${item.id}}">批改试卷</a>
                     </td>
                 </tr>
                 </tbody>
             </table>
         </div>
-        <div th:replace="/common/fragment :: page"></div>
     </div>
 </div>
 <script th:replace="/common/template :: script"></script>
