--- a/admin/src/main/resources/templates/system/testpaper/correcttextlist.html
+++ b/admin/src/main/resources/templates/system/testpaper/correcttextlist.html
@@ -6,16 +6,12 @@
 <body class="timo-layout-page">
 <div class="layui-card">
     <div class="layui-card-header timo-card-header">
-        <span><i class="fa fa-bars"></i> 试卷管理</span>
+        <span><i class="fa fa-bars"></i> 试卷批改列表</span>
         <i class="layui-icon layui-icon-refresh refresh-btn"></i>
     </div>
     <div class="layui-card-body">
         <div class="layui-row timo-card-screen">
             <div class="pull-left layui-form-pane timo-search-box">
-            </div>
-            <div class="pull-right screen-btn-group">
-                <button class="layui-btn open-popup" data-title="添加题目" th:attr="data-url=@{/system/subjectiveitem/add}"  data-size="auto">
-                    <i class="fa fa-plus"></i> 添加</button>
             </div>
         </div>
         <div class="timo-table-wrap">
@@ -40,7 +36,7 @@
                     <td th:text="${item.testname}">考试名称</td>
                     <td th:text="${item.startTime}">开始时间</td>
                     <td>
-                        <a data-title="编辑试题" th:href="@{'/system/testpaper/toupdate/'+${item.id}}"  data-size="800,600">编辑</a>
+                        <a  data-title="编辑试题" th:href="@{'/system/testpaper/getCorrectListById/'+${item.id}}">批改试卷</a>
                     </td>
                 </tr>
                 </tbody>
