--- a/admin/src/main/resources/templates/system/testpaper/correct.html
+++ b/admin/src/main/resources/templates/system/testpaper/correct.html
@@ -47,7 +47,7 @@
                             <div class="layui-form-item layui-form-text">
                                 <label class="layui-form-label">答案</label>
                                 <div class="layui-input-block">
-                                    <textarea class="layui-textarea" th:name="'achievementAnswer['+${itemStat.index}+'].anwser'" readonly="readonly">[[${item?.subject}]]</textarea>
+                                    <textarea class="layui-textarea" th:name="'achievementAnswer['+${itemStat.index}+'].anwser'" readonly="readonly">[[${item?.anwser}]]</textarea>
                                 </div>
                             </div>
                             <div class="layui-inline"><label class="layui-form-label">分数</label>
