--- a/admin/src/main/resources/templates/system/singlechoice/add.html
+++ b/admin/src/main/resources/templates/system/singlechoice/add.html
@@ -15,25 +15,25 @@
         <div class="layui-form-item">
             <label class="layui-form-label required">选项A</label>
             <div class="layui-input-inline">
-                <input class="layui-input" type="text" name="choiceA"  placeholder="请输入角色编号" th:value="${item?.choiceA}"/>
+                <input class="layui-input" type="text" name="choiceA"  placeholder="请输入内容" th:value="${item?.choiceA}"/>
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label required">选项B</label>
             <div class="layui-input-inline">
-                <input class="layui-input" type="text" name="choiceB"  placeholder="请输入角色编号" th:value="${item?.choiceB}"/>
+                <input class="layui-input" type="text" name="choiceB"  placeholder="请输入内容" th:value="${item?.choiceB}"/>
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label required">选项C</label>
             <div class="layui-input-inline">
-                <input class="layui-input" type="text" name="choiceC"  placeholder="请输入角色编号" th:value="${item?.choiceC}"/>
+                <input class="layui-input" type="text" name="choiceC"  placeholder="请输入内容" th:value="${item?.choiceC}"/>
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label required">选项D</label>
             <div class="layui-input-inline">
-                <input class="layui-input" type="text" name="choiceD"  placeholder="请输入角色编号" th:value="${item?.choiceD}"/>
+                <input class="layui-input" type="text" name="choiceD"  placeholder="请输入内容" th:value="${item?.choiceD}"/>
             </div>
         </div>
         <div class="layui-form-item">
